Refatoração do Makefile
O Makefile utiliza funções próprias para lidar com nomes de arquivos, ao
invés de comandos do shell. Estas funções estão disponíveis em
https://www.gnu.org/software/make/manual/make.html#Syntax-of-Functions e
fazem parte da documentação oficial da GNU sobre Makefile.

--- a/Lista_1/Makefile
+++ b/Lista_1/Makefile
@@ -18,18 +18,20 @@
 # 
 # Licença: Software de uso livre e código aberto.
 
-BIN = ./bin
 SRC = ./src
-F90 = $(shell ls $(SRC) | sed 's/^/\.\/bin\//')
-LISTA =  $(F90:.f90=.x)
+BIN = ./bin
+CC = gfortran
+LISTA = $(notdir $(wildcard ./src/*.f90))
+TMP = $(addprefix $(BIN)/, $(LISTA))
+DEP = $(TMP:.f90=.x)
 
-all:	$(LISTA)
+all:	$(DEP)
 
 $(BIN)/%.x:	$(SRC)/%.f90
-	gfortran $< -o $@
+	$(CC) $< -o $@
 
 %:	$(BIN)/%.x
 	$<
 
 clean:
-	rm $(BIN)/*.x
+	rm $(DEP)
